--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework==3.13.1
 gunicorn==20.1.0
 importlib-metadata==4.10.0
 Markdown==3.3.6
+psycopg2==2.9.3
 pytz==2021.3
 sqlparse==0.4.2
 typing_extensions==4.0.1
